# gn-node

./: .gitignore  .gn  BUILD.gn  DEPS  LICENSE  Makefile  README.md  codereview.settings  test
build_overrides/: build.gni
gn/: BUILD.gn
gn/node/: BUILD.gn  node.gni  node_files.gni
gn/node/src/inspector/: BUILD.gn
gn/node/test/: BUILD.gn
gn/node/test/addons/: BUILD.gn
gn/node/test/js-native-api/: BUILD.gn
gn/node/test/node-api/: BUILD.gn
gn/node/tools/doc/: BUILD.gn
tools/: config.gypi.template  generate_code_cache.py  generate_config_gypi.py  generate_gn_filenames_json.py  generate_node_files_json.py  gn-gen.py  js2c.py  mirror_removal.py  run-tests.sh  run_executable_in_dir.py  run_in_dir.py  test.py
