# This file is used by the GN meta build system to find the root of the source
# tree and to set startup options. For documentation on the values set in this
# file, run "gn help dotfile" at the command line.

import("//build/dotfile_settings.gni")

# The location of the build configuration file.
buildconfig = "//build/config/BUILDCONFIG.gn"

# The secondary source root is a parallel directory tree where
# GN build files are placed when they can not be placed directly
# in the source tree, e.g. for third party source trees.
secondary_source = "//gn/"

# These are the targets to check headers for by default. The files in targets
# matching these patterns (see "gn help label_pattern" for format) will have
# their includes checked for proper dependencies when you run either
# "gn check" or "gn gen --check".
check_targets = []

# These are the list of GN files that run exec_script. This whitelist exists
# to force additional review for new uses of exec_script, which is strongly
# discouraged except for gypi_to_gn calls.
exec_script_whitelist = build_dotfile_settings.exec_script_whitelist + []

default_args = {
  is_component_build = false
  use_sysroot = false
  clang_use_chrome_plugins = false
  node_use_v8_platform = true
  v8_experimental_extra_library_files = []
  v8_extra_library_files = []
  v8_postmortem_support = true
  v8_promise_internal_field_count = 1
  v8_embedder_string = "-node.10"
  v8_use_snapshot = true
  v8_deprecation_warnings = false
  v8_imminent_deprecation_warnings = false
  v8_enable_disassembler = true
  v8_use_external_startup_data = false
  v8_enable_handle_zapping = false
  v8_untrusted_code_mitigations = false
  v8_enable_pointer_compression = false
  v8_enable_embedded_builtins = true
  v8_enable_fast_mksnapshot = false
}

