# Copyright 2019 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("test_all") {
  testonly = true
  deps = [
    "//node:node",
    "//node:node_cctest",
    "//node/test/addons:build",
    "//node/test/node-api:build",
    "//node/test/js-native-api:build",
  ]
}
