# Copyright 2019 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

node_files = read_file("//node_files.json", "json")

npm_cli = "//node/deps/npm/bin/npm-cli.js"

node_headers = [
  "//node/deps/uv/include",
  "//node/deps/openssl/openssl/include",
  "//node/deps/openssl/config",
  "//node/src/node.h",
  "//node/src/node_buffer.h",
  "//node/src/node_object_wrap.h",
  "//node/src/node_version.h",
  "//node/common.gypi",
]

node_api_headers = [
  "//node/src/node_api.h",
  "//node/src/node_api_types.h",
  "//node/src/js_native_api.h",
  "//node/src/js_native_api_types.h",
  "//node/src/js_native_api_v8.h",
  "//node/src/js_native_api_v8_internals.h",
]
