# Copyright 2019 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//node/node_files.gni")

copy("copy_files") {
  sources = node_files.test_addons_files
  outputs = [ "$target_gen_dir/{{source_target_relative}}" ]
}
