# Copyright 2019 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//node/node_files.gni")
import("//node/node.gni")

sync_files("sync_files") {
  sources = node_files.test_addons_files
}

build_addons("build") {
  deps = [
    ":sync_files",
    "..:copy_node_headers",
    "..:copy_v8_headers",
    "..:copy_test_files",
    "//node/tools/doc:generate_addons",
  ]
  inputs = node_files.test_addons_files +
           node_files.v8_headers +
           node_headers
}
