# Copyright 2019 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//node/node_files.gni")
import("//node/node.gni")

copy("copy_files") {
  sources = node_files.test_js_native_api_files
  outputs = [ "$target_gen_dir/{{source_target_relative}}" ]
}

build_addons("build") {
  deps = [
    ":copy_files",
    "..:copy_node_api_headers",
    "..:copy_test_files",
  ]
  inputs = node_files.test_js_native_api_files +
           node_api_headers
}
