# Copyright 2019 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//node/node_files.gni")
import("//node/node.gni")

sync_files("sync_files") {
  sources = node_files.test_node_api_files
}

build_addons("build") {
  deps = [
    ":sync_files",
    "..:copy_node_api_headers",
    "..:copy_test_files",
    "../js-native-api:sync_files",
  ]
  inputs = node_api_headers +
           node_files.test_js_native_api_files +
           node_files.test_node_api_files
}
